Geo Location angular app changes and backend api CORS fixes

--- a/geolocation-fe/geo-location-app/angular.json
+++ b/geolocation-fe/geo-location-app/angular.json
@@ -68,10 +68,12 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "geo-location-app:build:production"
+              "browserTarget": "geo-location-app:build:production",
+              "proxyConfig": "src/proxy.conf.json"
             },
             "development": {
-              "browserTarget": "geo-location-app:build:development"
+              "browserTarget": "geo-location-app:build:development",
+              "proxyConfig": "src/proxy.conf.json"
             }
           },
           "defaultConfiguration": "development"
